use vim split style mark plugin

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -30,8 +30,8 @@ bind K swap-pane -U
 # split
 unbind '"'
 unbind '&'
-bind H split-window -h
-bind V split-window
+bind V split-window -h
+bind S split-window
 
 # reload
 bind r source-file ~/.tmux.conf
