Bring back more plugins from old config, fix tabline colors, add some new commands, abbrevs. Add relative num for VSCode config.

--- a/settings.json
+++ b/settings.json
@@ -3,6 +3,7 @@
     "workbench.colorTheme": "Visual Studio Dark",
     "git.openRepositoryInParentFolders": "never",
     "javascript.updateImportsOnFileMove.enabled": "never",
+    "editor.lineNumbers": "relative",
 
     // Vim settings
     "vim.useSystemClipboard": true,
